Revision history for Net-NSCA-Client
====================================

0.006 Tue, November 3, 2009 10:56:45 -0500
  * THIS CONTAINS AN IMPORTANT FIX AND PREVIOUS VERSIONS ARE NOT
    RECOMMENDED.
  * Fixed an issue where the client would try to parse the initial
    packet too early and throw an error about the UNIX timestamp
    not meeting a type constraint.

0.005 Sun, November 1, 2009 01:35:12 -0500
  * Finally fixed the test failures for t/send_nsca.t by requiring
    Pod::Usage 1.36+ for the script.

0.004 Sat, October 31, 2009 20:50:12 -0400
  * Modified t/send_nsca.t test so that the non-present required modules
    for the utility will not cause the entire module to fail.

0.003 Sat, October 31, 2009 16:40:01 -0400
  * New bin/send_nsca utility. This is an emulation of the send_nsca
    utility that comes with the NSCA package.
  * Changed from using Crypt::Random to Data::Rand::Obscure for generation
    of random IV when creating a Net::NSCA::Client::InitialPacket (note:
    this package itself never uses this feature).
  * No longer use Test::Most in tests, as it was unnecessary.

0.002 Thu, October 8, 2009 17:35:10 -0400
  * FIX: All Moose classes are now immutable
  * FIX: Creating a Net::NSCA::Client::InitialPacket without an IV would
    cause an error since the default ended up being a Math::Pari object
    [NOTE: This only would have affected code which explicitly created
     a Net::NSCA::Client::InitialPacket object]
  * Added a public constant $INITIALIZATION_VECTOR_LENGTH to
    Net::NSCA::Client::InitialPacket
  * initialization_vector attribute in Net::NSCA::Client::InitialPacket
    is now always exactly 128 bytes.
  * Fixed documentation in Net::NSCA::Client::DataPacket to specify all
    required attributes.
  * Added SEE ALSO section in Net::NSCA::Client
  * Added tests for many pieces of the objects and for packet reading
    and creation.

0.001 Tue, October 1, 2009 20:35:12 -0400
  * First release.